--- a/templates/partials/base-widgets.hbs
+++ b/templates/partials/base-widgets.hbs
@@ -1,5 +1,5 @@
 <div class="content-header">
-    <h2><i class="fas fa-puzzle-piece"></i> {{ccLocalize "names.widgets"}}</h2>
+    <h2><i class="fas fa-puzzle-piece"></i>  {{#if labelOverride}}{{labelOverride}}{{else}}{{ccLocalize "names.widgets"}}{{/if}}</h2>
     {{#if isGM}}
     <div class="header-actions">
             <i class="fas fa-wrench widget-tray-toggle" data-action="toggleWidgetTray"></i> 
